--- a/wordpress/templates/service.yaml
+++ b/wordpress/templates/service.yaml
@@ -1,15 +1,12 @@
+# nginx/templates/service.yaml
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "wordpress.fullname" . }}
-  labels:
-    {{- include "wordpress.labels" . | nindent 4 }}
+  name: nginx
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - port: 80
+      targetPort: 80
   selector:
-    {{- include "wordpress.selectorLabels" . | nindent 4 }}
+    app: nginx
