--- a/custom-wordpress/Chart.yaml
+++ b/custom-wordpress/Chart.yaml
@@ -1,9 +1,6 @@
 apiVersion: v2
 name: wordpress
-description: A Helm chart for Kubernetes
-
+description: Custom wordpress helm chart
 type: application
-
 version: 0.1.0
-
-appVersion: '0.1.0'
+appVersion: "0.1.0"
