--- a/custom-wordpress/values.yaml
+++ b/custom-wordpress/values.yaml
@@ -1,10 +1,9 @@
-# nginx/values.yaml
 replicaCount: 1
 
-image:
-  repository: nginx
-  tag: 'latest'
-  pullPolicy: IfNotPresent
+wordpress:
+  image:
+    repository: wordpress
+    tag: 'latest'
 
 service:
   type: ClusterIP
