--- a/custom-wordpress/templates/mysql-pvc.yaml
+++ b/custom-wordpress/templates/mysql-pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Release.Name }}-wordpress-claim
+  name: {{ .Release.Name }}-mysql-claim
   labels:
     app: {{ .Release.Name }}-wordpress
 spec:
