--- a/custom-wordpress/templates/mysql-service.yaml
+++ b/custom-wordpress/templates/mysql-service.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   ports:
     - port: 3306
+      name: mysql
   selector:
     app: {{ .Release.Name }}-wordpress
     tier: {{ .Release.Name }}-mysql
