--- a/custom-wordpress/templates/mysql-pvc.yaml
+++ b/custom-wordpress/templates/mysql-pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Release.Name }}-mysql-claim
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ .Release.Name }}-wordpress
 spec:
@@ -9,4 +10,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 2Gi
+      storage: 3Gi
