--- a/custom-wordpress/templates/wordpress-deployment.yaml
+++ b/custom-wordpress/templates/wordpress-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}-wordpress
 spec:
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: {{ .Release.Name }}-wordpress
@@ -18,19 +19,18 @@ spec:
         app: {{ .Release.Name }}-wordpress
         tier: {{ .Release.Name }}-frontend
     spec:
-      replicas: {{ .Values.replicaCount }}
       containers:
-      - image: wordpress:6.2.1-apache
+      - image: wordpress:6.6.2-apache
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
-          value: wordpress-mysql
+          value: {{ .Release.Name }}-mysql
         - name: WORDPRESS_DB_USER
           value: wordpress
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ .Release.Name }}-mysql-pass
+              name: {{ .Release.Name }}-mysql
               key: password
         ports:
         - containerPort: 80
