--- a/custom-wordpress/templates/wordpress-service.yaml
+++ b/custom-wordpress/templates/wordpress-service.yaml
@@ -6,9 +6,9 @@ metadata:
   labels:
     app: {{ .Release.Name }}-wordpress
 spec:
-  type: ClusterIP
   ports:
     - port: 80
+      name: http
   selector:
     app: {{ .Release.Name }}-wordpress
     tier: {{ .Release.Name }}-frontend
