--- a/wordpress/templates/wordpress-deployment.yaml
+++ b/wordpress/templates/wordpress-deployment.yaml
@@ -33,7 +33,7 @@ spec:
               name: {{ .Release.Name }}-mysql
               key: password
         - name: WORDPRESS_CONFIG_EXTRA
-          value: {{ .Values.wordpressConfigExtra }}
+          value: "$_SERVER['HTTPS'] = 'on';"
         ports:
         - containerPort: 80
           name: wordpress
