--- a/wordpress/templates/wordpress-deployment.yaml
+++ b/wordpress/templates/wordpress-deployment.yaml
@@ -32,8 +32,8 @@ spec:
             secretKeyRef:
               name: {{ .Release.Name }}-mysql
               key: password
-        - name: WORDPRESS_CONFIG_EXTRA
-          value: "$_SERVER['HTTPS'] = 'on';"
+        # - name: WORDPRESS_CONFIG_EXTRA
+        #   value: "$_SERVER['HTTPS'] = 'on';"
         ports:
         - containerPort: 80
           name: wordpress
