--- a/wordpress/templates/secret.yaml
+++ b/wordpress/templates/secret.yaml
@@ -7,5 +7,5 @@ metadata:
     app: {{ .Release.Name }}-wordpress
 type: Opaque
 data:
-  rootpassword: "WEJYYVdzT0RCag=="
-  password: "dU5LZG92VDZDVQ=="
+  rootpassword: {{ .Values.mysql.rootPass }}
+  password: {{ .Values.mysql.pass }}
