--- a/wordpress/templates/wordpress-deployment.yaml
+++ b/wordpress/templates/wordpress-deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: {{ .Release.Name }}-wordpress
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.wordpress.replicaCount }}
   selector:
     matchLabels:
       app: {{ .Release.Name }}-wordpress
@@ -20,23 +20,24 @@ spec:
         tier: {{ .Release.Name }}-frontend
     spec:
       containers:
-      - image: wordpress:6.6.2-apache
+      - image: {{ .Values.wordpress.image }}:{{ .Values.wordpress.tag }}
         name: wordpress
         env:
         - name: WORDPRESS_DB_HOST
           value: {{ .Release.Name }}-mysql
+        - name: WORDPRESS_DB_NAME
+          value: {{ .Values.mysql.db }}
         - name: WORDPRESS_DB_USER
-          value: wordpress
+          value: {{ .Values.mysql.user }}
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
               name: {{ .Release.Name }}-mysql
               key: password
         - name: WORDPRESS_CONFIG_EXTRA
-          value: |
-            $_SERVER['HTTPS'] = 'on';
+          value: {{- toYaml .Values.wordpress.configExtra | indent 10 }}
         ports:
-        - containerPort: 80
+        - containerPort: {{ .Values.wordpress.port }}
           name: wordpress
         volumeMounts:
         - name: wordpress-persistent-storage
