--- a/wordpress/templates/ingress.yaml
+++ b/wordpress/templates/ingress.yaml
@@ -6,6 +6,12 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     app: {{ .Release.Name }}-wordpress
+  {{- if .Values.ingress.annotations }}
+  annotations:
+    {{- range $key, $value := .Values.ingress.annotations }}
+      {{ $key }}: {{ $value }}
+    {{- end }}
+  {{- end }}
 spec:
   rules:
     - host: {{ .Values.ingress.hostname }}
