--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Node.js app",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"testing...\" && exit 0"
@@ -11,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
