--- a/nodejs-app/helm-chart/values.yaml
+++ b/nodejs-app/helm-chart/values.yaml
@@ -1,25 +1,21 @@
 replicaCount: 1
+image: aws-devops/nodejs-app
 tag: latest
 port: 3000
 servicePort: 80
 portName: http
 ingress:
   enabled: true
-  hostname: nodejs-app.kozak.day
+  hostname: example.com
   path: /
   pathType: ImplementationSpecific
   annotations: 
     traefik.ingress.kubernetes.io/router.entrypoints: web
 
-awsRegion: eu-north-1
-# ecrRegistry: <AWS_ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com
-# ecrAuthString: --set ecrAuthString=$(aws ecr get-login-password --region <REGION> | base64)
-ecrTokenRefresherImage: public.ecr.aws/eks-anywhere/ecr-token-refresher:latest
-repository: aws-devops/nodejs-app
 initialEcrDockerConfigJson: |
   {
     "auths": {
-      "{{ .Values.ecrRegistry }}": {
+      "{{ .Values.registry }}": {
         "auth": "{{ .Values.ecrAuthString }}"
       }
     }
