--- a/nodejs-app/helm-chart/templates/deployment.yaml
+++ b/nodejs-app/helm-chart/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: {{ .Release.Name }}
     spec:
       containers:
-      - image: {{ .Values.registry }}/{{ .Values.image }}:{{ .Values.tag }}
+      - image: {{ .Values.registry }}:{{ .Values.tag }}
         name: nodejs-app
         imagePullPolicy: IfNotPresent
         ports:
