--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -12,6 +12,7 @@
   "author": "Ilya Kozak",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
     "express": "^4.21.1"
   },
   "devDependencies": {
