--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -16,6 +16,8 @@
     "express": "^4.21.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.1",
+    "typescript": "^5.6.3"
   }
 }
