--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "Node.js app",
   "main": "app.js",
-  "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-    "build": "npm install && echo \"build is completed\"",
+    "start": "node dist/app.js",
+    "build": "tsc",
     "test": "echo \"testing...\" && exit 0"
   },
   "author": "Ilya Kozak",
