--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc",
-    "test": "echo \"testing...\" && exit 0"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "author": "Ilya Kozak",
   "license": "ISC",
@@ -16,7 +18,12 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
